<resources>
    <string name="app_name">Client</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email:</string>
    <string name="lastname">Last Name:</string>
    <string name="firstname">First Name:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="port">Server Port:</string>
    <string name="host">Server Host:</string>
    <string name="gender">Gender:</string>
    <string name="default_map_text">Click a marker to see event details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
