<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.client.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="2"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="10dp"
        android:useDefaultMargins="false">

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/host"/>
        <EditText
            android:inputType="text"
            android:id="@+id/serverHost"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/port"/>
        <EditText
            android:inputType="text"
            android:id="@+id/serverPort"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/firstname"/>
        <EditText
            android:id="@+id/firstname"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/lastname"/>
        <EditText
            android:id="@+id/lastname"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/email"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_margin = "0dp"
            android:padding="10dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>
        <RadioGroup
            android:id="@+id/gender_buttons"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
        </RadioGroup>
    </GridLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:enabled="false"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:enabled="false"
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>